# ShopSimulation

./: CMakeLists.txt  PROI_sklep_dokumentacja_końcowa.md  README.md  Structures.cpp  Structures.hpp  main.cpp  names.txt  products.txt
Client/: Client.cpp  Client.hpp  MenagersFriend.cpp  MenagersFriend.hpp  RegularClient.cpp  RegularClient.hpp  Tourist.cpp  Tourist.hpp
Employee/: Employee.hpp  cashier.cpp  cashier.hpp  cleaner.cpp  cleaner.hpp  employee.cpp  employee.hpp  manager.cpp  manager.hpp  storekeeper.cpp  storekeeper.hpp
EventsGenerator/: EventsGenerator.cpp  EventsGenerator.hpp
FileHandler/: FileHandler.cpp  FileHandler.hpp
PeopleParser/: PeopleParser.cpp  PeopleParser.hpp
Product/: Beverage.cpp  Beverage.hpp  Breadstuff.cpp  Breadstuff.hpp  Cosmetics.cpp  Cosmetics.hpp  Dairy_product.cpp  Dairy_product.hpp  Fruit_vegetable.cpp  Fruit_vegetable.hpp  Industrial_article.cpp  Industrial_article.hpp  Product.cpp  Product.hpp
RandomEvent/: CleanerCleansEvent.cpp  CleanerCleansEvent.hpp  ClientBuysEvent.cpp  ClientBuysEvent.hpp  MenagerGivesRiseEvent.cpp  MenagerGivesRiseEvent.hpp  MenagerTalksToFriendEvent.hpp  RandomEvent.cpp  RandomEvent.hpp  SupplierAddsProductsEvent.cpp  SupplierAddsProductsEvent.hpp
Receipt/: Receipt.cpp  Receipt.hpp
Simulation/: Simulation.cpp  Simulation.hpp
Store/: Store.cpp  Store.hpp
Tests/: test_client.cpp  test_employee.cpp  test_filehandler.cpp  test_peopleparser.cpp  test_product.cpp  test_simulation.cpp  test_store.cpp
UserInterface/: ClientInterface.hpp  UserInterface.cpp  UserInterface.hpp
google_tests/: CMakeLists.txt  test_store.cpp
